2010-04-29  Kevin B. Kenny  <kennykb@acm.org>

	* library/tzdata/Antarctica/Macquarie:
	* library/tzdata/Africa/Casablanca:
	* library/tzdata/Africa/Tunis:
	* library/tzdata/America/Santiago:
	* library/tzdata/America/Argentina/San_Luis:
	* library/tzdata/Antarctica/Casey:
	* library/tzdata/Antarctica/Davis:
	* library/tzdata/Asia/Anadyr:
	* library/tzdata/Asia/Damascus:
	* library/tzdata/Asia/Dhaka:
	* library/tzdata/Asia/Gaza:
	* library/tzdata/Asia/Kamchatka:
	* library/tzdata/Asia/Karachi:
	* library/tzdata/Asia/Taipei:
	* library/tzdata/Europe/Samara:
	* library/tzdata/Pacific/Apia:
	* library/tzdata/Pacific/Easter:
	* library/tzdata/Pacific/Fiji:   Olson's tzdata2010i.
	
2010-04-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinPort.h  Fix [Patch 2986105]: conditionally defining
	* win/tclWinFile.c  strcasecmp/strncasecmp

2010-04-18  Donal K. Fellows  <dkf@users.sf.net>

	* doc/unset.n: [Bug 2988940]: Fix typo.

2010-04-14  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Linux platform identification:
	* library/platform/pkgIndex.tcl: Check /lib64 for existence of
	* unix/Makefile.in: files matching libc* before accepting it as
	* win/Makefile.in: base directory. This can happen on weirdly
	installed 32bit systems which have an empty or partially filled
	/lib64 without an actual libc. Bumped to version 1.0.6.

2010-04-03  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* generic/tclStringObj.c: (SetStringFromAny): avoid trampling
	over the tclEmptyStringRep as it is thread-shared.

	* generic/tclThreadStorage.c (ThreadStorageGetHashTable):
	avoid accessing shared table index w/o mutex protection
	if VALGRIND defined on compilation time. This rules out
	helgrind complains about potential race-conditions at
	that place.

	Thanks to Gustaf Neumann for the (hard) work.

2010-03-31  Donal K. Fellows  <dkf@users.sf.net>

	* doc/package.n: [Bug 2980210]: Document the arguments taken by